--- a/node/public/1.html
+++ b/node/public/1.html
@@ -367,57 +367,76 @@ go(users2,
   console.log);
 </script>
 
-## reduce + 복잡한 함수 + acc 보다 map f + reduce + f
+## reduce + 복잡한 함수 + acc 보다 map + reduce
 
 <script>
-  console.clear();
+console.log(
+  reduce((total, u) => total + u.age, 0, users2));
 
-  console.log(reduce((total, u) => {
-    return total + u.age;
-  }, 0, users2));
-
-  go(users2,
-    L.map(u => u.age),
-    reduce(add),
-    console.log);
+console.log(
+  reduce(add, L.map(u => u.age, users2)));
 </script>
 
 ## reduce 하나보다 map filter reduce
 
 <script>
-  console.clear();
+// 만능 reduce (X)
+// map + filter + reduce (O)
 
-  console.log(reduce((total, u) => {
+console.log(
+  reduce((total, u) =>
+    u.age < 30 ?
+      total + u.age : total, 0, users2));
 
-
-    if (u.age < 30) return total + u.age;
-
-
-    return total;
-  }, 0, users2));
-
-  go([],
-    L.filter(u => u.age < 30),
-    L.map(u => u.age),
-    take(2),
-    reduce(add),
-    console.log);
+console.log(
+  reduce(add,
+    L.map(u => u.age,
+      L.filter(u => u.age < 30, users2))));
 </script>
 
 <script>
-const obj = {
+const obj1 = {
   a: 1,
   b: undefined,
   c: 'CC',
   d: 'DD'
 };
-go(
-  obj,
+
+// BAD
+const query1 = obj =>
+  Object.entries(obj)
+    .reduce((query, [k, v], i) => {
+      if (v === undefined) return query;
+      const amp = i == 0 ? '' : '&';
+      return `${query}${amp}${k}=${v}`;
+    },
+    '');
+
+query1(obj1);
+// a=1&c=CC&d=DD
+
+// GOOD
+const query2 = pipe(
   Object.entries,
   reject(([k, v]) => v === undefined),
   map(([k, v]) => `${k}=${v}`),
-  reduce((a, b) => `${a}&${b}`),
-  console.log);
+  reduce((a, b) => `${a}&${b}`));
+
+query2(obj1);
+// a=1&c=CC&d=DD
+
+// 혹은
+const join = curry((sep = ',', iter) =>
+  reduce((a, b) => `${a}${sep}${b}`, iter));
+
+const query3 = pipe(
+  Object.entries,
+  reject(([k, v]) => v === undefined),
+  map(join('=')),
+  join('&'));
+
+console.log(query3(obj1));
+// a=1&c=CC&d=DD
 </script>
 
 # 객체를 이터러블 프로그래밍으로 다루기
@@ -436,6 +455,7 @@ go(
 
 <script>
 </script>
+
 
 </body>
 </html>
