--- a/node/public/1.html
+++ b/node/public/1.html
@@ -530,18 +530,15 @@ log(join(',', []));
 ### pick
 
 <script>
-  const pick = (ks, obj) => go(
-    obj,
-    L.entries,
-    L.filter(([k]) => ks.includes(k)),
-    L.take(ks.length),
-    object
-  );
+const pick = (ks, obj) => go(
+  obj,
+  L.entries,
+  L.filter(([k]) => ks.includes(k)),
+  L.take(ks.length),
+  object);
 
-  log( pick(['b', 'c'], {a: 1, b: 2, c: 3, d: 4, e: 5, /*...*/}) );
-  // [['a', 1], ['b', 2] ...]
-  // [['b', 2], ['c', 3]]
-  // {b: 2, c: 3}
+pick(['b', 'c'], {a: 1, b: 2, c: 3, d: 4, e: 5, /*...*/});
+// {b: 2, c: 3}
 </script>
 
 ## Map, Set
